Deployment/Keycloak/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: keycloak
  namespace: auth
spec:
  host: openidconnect
  trafficPolicy:
    tls:
      mode: DISABLE
